Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-14940

Source specified send to NID on different net should fail if there is no route

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      Using the lnetctl ping --source flag (LU-14939) it is possible to send a ping from a local interface on @tcp1 to a remote interface on @tcp2 even though no route exists between these network types. This should not be allowed.

            hornc Chris Horn
            hornc Chris Horn
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: